--- a/Responsive ontwikkelen/responsive.css
+++ b/Responsive ontwikkelen/responsive.css
@@ -1,6 +1,6 @@
 
 * {
-	font-family: Avenir;
+	font-family: Helvetica;
 }
 
 section {
@@ -9,24 +9,85 @@ section {
 	padding-right: 10px;
 }
 
-header {
-	grid-column: 1/3;
+@media screen and (min-width: 640px) {
+	
+	.wrapper {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+	}
+
+	main {
+		grid-column: 1/3;
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-gap: 2em;
+	}
+
+	header {
+		grid-column: 1/3;
+	}
+
+	.skyline {
+		height: 300px;
+		background-image: url("shanghai640x300.png");
+	}
+
+	section {
+		margin: 2vw;
+		padding: 2vw;
+	}
+
 }
 
-main {
-	grid-column: 1/3;
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-gap: 2em;
+@media screen and (min-width: 840px) {
+	
+	.wrapper {
+		grid-template-columns: 1fr;
+	}
+
+	.skyline {
+		height: 400px;
+		background-image: url("manhattan840x400.png");
+	}
+
+	section:nth-child(odd) {
+		border: none;
+	}
+
 }
 
-.skyline {
-	width: 100%;
+@media screen and (min-width: 1200px) {
+
+	.wrapper {
+		grid-template-columns: 1fr 1fr 1fr;
+	}
+
+	header {
+		grid-column: 1/4;
+	}
+
+	main {
+		grid-column: 1/4;
+		grid-template-columns: 1fr 1fr 1fr;
+	}
+
+	aside {
+		grid-column: 1/2;
+	}
+
+	.skyline {
+		background-image: url("vancouver1200x300.png");
+		grid-column: 1/4;
+	}
+
+	footer {
+		grid-column: 2/4;
+	}
+
 }
 
-.wrapper {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
+.breder {
+	grid-column: span 2;
 }
 
 #validatie {
